test/e2e/features/backendtls/testdata/configmap.yaml
# public cert of self-signed cert loaded into nginx, see nginx.yaml
# separate file so it can be deleted independently
apiVersion: v1
data:
  ca.crt: |
    -----BEGIN CERTIFICATE-----
    MIIDFTCCAf2gAwIBAgIUIlv+uw9O1gTwKnf4HvCIFusHWh4wDQYJKoZIhvcNAQEL
[...]
    cmk3NzvSnsKQt+jTR3DZWdUR5Iua0WP6xw==
    -----END CERTIFICATE-----
kind: ConfigMap
metadata:
  name: ca
  namespace: kgateway-base
