test/e2e/features/backendtls/testdata/missing-target.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: tls-policy
spec:
  targetRefs:
  - group: ""
    kind: Service
    name: missing-nginx
  validation:
    hostname: "example.com"
    wellKnownCACertificates: System
